--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 .idea/
+.build/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
