Fixed lambda and ready to compute mock data

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/aws-lambda": "^8.10.125",
     "@types/uuid": "^9.0.6",
     "min-cost-flow": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
     "serverless": "^3.36.0",
     "serverless-offline": "^13.2.0",
     "serverless-plugin-typescript": "^2.1.5",
